added color-container around button to center

--- a/index.html
+++ b/index.html
@@ -11,10 +11,11 @@
     <body>
        <div class="color-container">
         <div class="color-box"></div>
-
        </div>
 
-       <button class="color-change">Change Color</button>
+       <div class="color-container">
+        <button class="color-change">Change Color</button>
+       </div>
         
         <script src="" async defer></script>
     </body>
