connected app.js to source

--- a/index.html
+++ b/index.html
@@ -17,6 +17,6 @@
         <button class="color-change">Change Color</button>
        </div>
         
-        <script src="" async defer></script>
+        <script src="app.js" async defer></script>
     </body>
 </html>
