--- a/index.html
+++ b/index.html
@@ -1,19 +1,13 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Emer's Colors</title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="styles.css">
-    </head>
-    <body>
-       <div class="color-container">
-        <div class="color-box"></div>
-        <button class="color-change">Change Color</button>
-       </div>
-        
-        <script src="app.js" async defer></script>
-    </body>
+<head>
+    <link rel="stylesheet" type="text/css" href="styles.css">
+</head>
+<body>
+    <div id="color-container">
+        <div id="color-box"></div>
+        <button id="change-color-button">Change Color</button>
+    </div>
+    <script src="app.js"></script>
+</body>
 </html>
