added script.js not app.js

--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
         <div id="color-box"></div>
         <button id="change-color-button">Change Color</button>
     </div>
-    <script src="app.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
